Update personal information

--- a/src/app/cv/cv.component.html
+++ b/src/app/cv/cv.component.html
@@ -6,8 +6,8 @@
                 
                 <h5>Jovani Brasil (<b>Currículo resumido</b>)</h5>
         
-                <p>Olá, Meu nome é Jovani Brasil, tenho 27 anos de idade e atualmente moro em Porto Alegre, Rio Grande do Sul. Sou cientista
-                    da computação formado pela PUCRS.</p>
+                <p>Olá, Meu nome é Jovani Brasil, tenho 28 anos de idade e atualmente moro em Porto Alegre, Rio Grande do Sul. Sou cientista
+                    da computação formado pela PUCRS e programador na Compasso UOL.</p>
         
                 <p>Minhas primeiras experiências foram dentro da universidade. Em 2012 entrei no Programa de Educação
                 Tutorial da PUCRS (PET-PUCRS), onde desempenhei iniciação ciêntifica, tendo oportunidade de trabalhar junto a professores
@@ -16,20 +16,19 @@
                 princípios de teste baseado em modelos (MBT). Em 2015 iniciei minha jornada no Virtual Humans Simulation 
                 Laboratory (VHLAB-PUCRS), onde fui bolsista, programando e testando os simuladores de multidões Crowdsim e Biocrowds. Lá
                 tive diversas publicações junto ao grupo, tanto nacionais quanto internacionais (veja as publicações 
-                <a href="http://lattes.cnpq.br/3411257639128251">aqui</a>).</p>
-        
-                <p>Quando que saí do VHLAB em meados de 2016, voltei meu foco para a faculdade e no estudo de assuntos relacionados as 
-                disciplinas. Em especial, engenheria de software e inteligência artificial tem sido as áreas que tiveram atenção especial 
-                nos últimos meses, sendo que amo ambas as áreas e considero de extrema valia para a computação.</p>
+                <a href="http://lattes.cnpq.br/3411257639128251">aqui</a>). Quando saí do VHLAB em meados de 2016, voltei meu foco para a faculdade e no estudo de assuntos relacionados as 
+                disciplinas.</p>
 
-                <p>Desde março deste ano sou programador na Compasso Uol, como foco principalmente no desenvolvimento de aplicações Java com Spring Boot. 
-                    Na Compasso estou tendo a oportunidade de afiar minhas skills e de vivenciar experiência de projetos, trabalhando em equipe 
-                    e utilizando metodologias ágeis.
+                <p>Então em março deste ano me tornei programador na Compasso UOL. Na Compasso UOL estou tendo a oportunidade de afiar minhas skills e 
+                    de vivenciar experiência de projetos, trabalhar em equipe, utilizar metodologias ágeis e desenvolver soluções 
+                    utilizando tecnologias de ponta. No momento estou alocado como desenvolvedor de testes automatizados no Santander 
+                    Merchant Platform Solutions (SMPS/Getnet), sendo um dos responsáveis pela criação e execução de testes automatizados 
+                    utilizando Postman e Nodejs.
                 </p>
         
-                <p>Atualmente estou focado no estudo de diversas tecnologias com alta demanda na indústria, em especial Java 
-                    e o Spring Framework. Meus estudos também compreendem as linguagens JavaScript e TypeScript, diversas tecnologias 
-                    como JPA, Angular, Hibernate, Flyway, Maven, Node, Docker, Postman, Jenkins, JUnit, Jacoco, Cucumber, Solr, 
+                <p>Apesar de estar utilizando JavaScript diariamente, estou focado no estudo de diversas tecnologias com alta demanda 
+                    na indústria, em especial Java e o Spring Framework. Meus estudos também compreendem TypeScript, diversas tecnologias 
+                    como JPA, Angular, Hibernate, Maven, NodeJs, Docker, Postman, Jenkins, JUnit, Jacoco, Cucumber, Solr, 
                     MariaDB, MySQL, MongoDB, Kafka e RabbitMQ.</p>
         
                 <p>Para mais informações sobre a minha pessoa, você pode me mandar um email (jovanibrasil@gmail.com), dar uma olhada em meus projetos
