--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -36,13 +36,15 @@
                     <p>Olá, seja bem vindo(a) a minha página pessoal!</p>
                     <p>
                     Meu nome é Jovani Brasil, sou Bacharel em Ciência da Computação pela Pontifícia Universidade Católica 
-                    do Rio Grande do Sul e atualmente sou programador na Compasso UOL. Hoje, minhas principais áreas de interesse 
-                    são engenharia de software, processamento de linguagem natural 
-                    e machine learning. Tenho interesse nas mais diversas tecnologias e gosto de estar sempre me atualizando. 
+                    do Rio Grande do Sul (PUCRS) e atualmente sou desenvolvedor na Compasso UOL. No momento estou alocado como desenvolvedor
+                    de testes automatizados no Santander Merchant Platform Solutions (SMPS/Getnet).   
+                    
+                    Hoje, minha principal área de interesse é a engenharia de software, com foco no desenvolvimento e teste de aplicações distribuídas. 
+                    Também tenho um carinho especial pelas áreas de processamento de linguagem natural e machine learning, principalmente quando
+                    são aplicadas a engenharia  de software. Tenho interesse nas mais diversas tecnologias e gosto de estar sempre me atualizando. 
                     Sou apaixonado pela educação à distância, sendo fã de plataformas como 
                     <a href="https://www.coursera.org/">Coursera</a>, 
                     <a href="https://www.udemy.com/">Udemy</a> e <a href="https://www.complexityexplorer.org/">Complexity Explorer</a>.
-                    Sou também tradutor voluntário na plataforma <a href="https://amara.org/pt/">Amara</a>.
                     Caso necessário, sinta-se à vontade para entrar em contato comigo. 
                     Você também pode visitar meu <a href="/#/cv">CV</a>, para mais detalhes sobre minhas qualificações. Já meus
                     projetos você pode conferir no meu <a href="https://github.com/jovanibrasil">Github</a>.
